# FixParser

./: Cargo.toml
resources/: execution_report1.txt  fix_sample_message1.txt  new_order1.txt  order_cancel_request1.txt  order_status_request1.txt
src/: client.rs  execution_report.rs  fix_file_reader.rs  fix_message.rs  fix_message_parser.rs  main.rs  new_order.rs  order_cancel_request.rs  order_status_request.rs  ws_client.rs
src/fix/: fix_file_reader.rs  fix_message.rs  fix_message_parser.rs  mod.rs
src/fix/messages/: execution_report.rs  mod.rs  new_order.rs  order_cancel_request.rs  order_status_request.rs
src/oms/: mod.rs  order_management_system.rs
