[package]
name = "fixparser"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-server = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
hyper = { version = "1.5.0", features = ["full"] }
