[package]
name = "fixparser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-server = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
hyper = { version = "1.5.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3"
url = "2.5.2"
